fix -  decreasing scrollbar width

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -905,14 +905,14 @@ font-size: var(--small-font-size);
 /*========== SCROLL BAR ==========*/
 
 ::-webkit-scrollbar {
-    width: 1rem;
+    width: .6rem;
     background-color: var(--scroll-bar-color);
-    border-radius: .5rem;
+    border-radius: .2rem;
 }
 
 ::-webkit-scrollbar-thumb {
     background-color: var(--scroll-thumb-color);
-    border-radius: .5rem;
+    border-radius: .2rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
